# traffic-analyzer

./: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.work  go.work.sum  main.go
common/: admin.go  consumer.go  enriched_packet.go  go.mod  go.sum  packet.go  producer.go
docker-compose/: docker-compose.yml  grafana.yml  influxdb.yml  redpanda.yml
mansamusa/: go.mod  go.sum  main.go
mansamusa/cmd/: mansamusa.go
mansamusa/internal/: enrich_message.go  kafka_connection.go
processor/: go.mod
processor/cmd/: processor.go
processor/internal/: kafka_connection.go  uploader.go
sniffer/: Cargo.toml  constants.go  go.mod  go.sum  main.go
sniffer/cmd/: sniffer.go
sniffer/internal/: kafka_connection.go  packet.go  sniffer.go
sniffer/src/: args.rs  kafka.rs  main.rs  packet.rs  sniff.rs
