[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
netflow_parser = "0.3.6"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = { version = "1.0.204", features = ["derive"] }
